Bug 461287 - nsHttpStreamStrategy::Seek() incorrectly increments read cursor - r=chris.double sr=roc